spacing fixes

--- a/app/assets/stylesheets/pages/_finances.scss
+++ b/app/assets/stylesheets/pages/_finances.scss
@@ -286,7 +286,7 @@
   #invoice-info {
     text-align: right;
     margin-right: 10px;
-    width: 30%;
+    width: 35%;
 
     p {
       font-size: 14px !important;
